# barforge

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.github/workflows/: playwright.yml
apps/barforge-desktop/: Cargo.toml
apps/barforge-desktop/src/: main.rs  state.rs  ui.rs
apps/barforge-desktop/tests/: browse_state.rs  desktop_entry.rs  installed_state.rs  module_detail.rs  module_detail_ui.rs  ui_shell.rs  updates_shell.rs
apps/barforge-web/: Cargo.toml
apps/barforge-web/assets/: main.css
apps/barforge-web/e2e/: package-lock.json  package.json  playwright.config.ts  tmp-debug-list-view.mjs  tsconfig.json
apps/barforge-web/e2e/tests/: command-palette.spec.ts  crawl.spec.ts  footer.spec.ts  install-snippet.spec.ts  modules-list-view.spec.ts  search-shortcut.spec.ts  stats.spec.ts  tabs.spec.ts  visual.spec.ts
apps/barforge-web/src/: api.rs  app.rs  app_time.rs  auth_redirect.rs  auth_ui.rs  command_palette.rs  forms.rs  lib.rs  main.rs  notifications.rs  pages.rs  recently_viewed.rs  routes.rs  sample_data.rs  stars.rs  state.rs  theme.rs
apps/barforge-web/src/server/: admin.rs  auth.rs  collections.rs  mod.rs  modules.rs  notifications.rs  stars.rs  users.rs
apps/barforge-web/tests/: auth.rs  command_palette.rs  entrypoint.rs  icons.rs  logging.rs  routes.rs  styles.rs  theme.rs
crates/barforge-contracts/: Cargo.toml
crates/barforge-contracts/src/: openapi.rs
crates/barforge-contracts/tests/: api_integration.rs  openapi_contract.rs
crates/barforge-types/: Cargo.toml
crates/barforge-types/src/: lib.rs
crates/barforge-types/tests/: problem_details.rs  registry_types.rs
crates/barforge-web-ui/: Cargo.toml
crates/barforge-web-ui/src/: categories.rs  filters.rs  lib.rs
crates/barforge-web-ui/src/components/: category_pills.rs  mod.rs  module_card.rs  module_detail.rs  module_list.rs  pagination_controls.rs  profile_hover.rs  search_query_form.rs  search_toolbar.rs
crates/barforge-web-ui/tests/: category_pills.rs  module_detail.rs  module_list.rs  pagination_controls.rs  search_query_form.rs  search_toolbar.rs
crates/barforge-web-ui/tests/support/: fragment_keys.rs  sample_module.rs
