[package]
name = "barforge-desktop"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
barforge-types = { path = "../../crates/barforge-types" }
dioxus = { workspace = true, features = ["macro", "hooks", "signals", "html", "launch"] }
semver = { workspace = true }

[dev-dependencies]
dioxus-ssr.workspace = true

[features]
desktop = ["dioxus/desktop"]
