[package]
name = "barforge-web"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
barforge-types = { path = "../../crates/barforge-types" }
barforge-web-ui = { path = "../../crates/barforge-web-ui" }
dioxus = { workspace = true, features = ["macro", "html", "signals", "hooks", "document", "fullstack"] }
dioxus-fullstack = { workspace = true }
dioxus-server = { workspace = true, optional = true }
dioxus-history.workspace = true
dioxus-router = { workspace = true }
manganis = { workspace = true }
js-sys = "0.3.83"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = ["Clipboard", "CssStyleDeclaration", "Document", "Element", "Event", "EventSource", "EventTarget", "HtmlElement", "KeyboardEvent", "Location", "MediaQueryList", "MessageEvent", "Navigator", "Request", "RequestCredentials", "RequestInit", "RequestMode", "Response", "Selection", "Storage", "Window"] }
serde = "1.0.228"
serde_json.workspace = true
time.workspace = true
url.workspace = true
base64 = { workspace = true, optional = true }
ring = { workspace = true, optional = true }
axum = { version = "0.8.8", optional = true }
axum-tower-sessions-csrf = { version = "0.1.1", optional = true }
oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest", "rustls-tls"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"], optional = true }
tower-sessions = { version = "0.14.0", optional = true }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"], optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.22", optional = true }
anyhow = { version = "1.0.100", optional = true }

[dev-dependencies]
dioxus-ssr.workspace = true
http-body-util = "0.1.3"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tower = "0.5.2"

[features]
default = ["web"]
web = ["dioxus/web", "dioxus/launch", "dioxus/devtools", "dioxus-fullstack/web"]
server = [
    "dioxus/server",
    "dep:dioxus-server",
    "dioxus-fullstack/server",
    "dep:axum",
    "dep:axum-tower-sessions-csrf",
    "dep:anyhow",
    "dep:base64",
    "dep:oauth2",
    "dep:reqwest",
    "dep:ring",
    "dep:tokio",
    "dep:tower-sessions",
    "dep:tower-sessions-sqlx-store",
    "dep:tracing",
    "dep:tracing-subscriber",
]
