[package]
name = "barforge-web-ui"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
barforge-types = { path = "../barforge-types" }
dioxus = { workspace = true, features = ["macro", "html", "signals", "hooks"] }
dioxus-ssr.workspace = true
manganis = { workspace = true, features = ["dioxus"] }
time = { workspace = true, features = ["parsing"] }
